--- a/src/containers/Blog/Blog.css
+++ b/src/containers/Blog/Blog.css
@@ -1,22 +1,23 @@
-.Blog ul{
+.Blog ul {
     list-style: none;
-    padding: 0;
     margin: 0;
+    padding: 0;
     width: 100%;
-    text-align: center
+    text-align: center;
 }
 
-.Blog li{
+.Blog li {
     display: inline-block;
     margin: 20px;
 }
 
-.Blog a{
+.Blog a {
     text-decoration: none;
     color: black;
 }
 
 .Blog a:hover,
-.Blog a:active{
-    color: orange;
+.Blog a:active,
+.Blog a.active {
+    color: #fa923f;
 }
